# Mint3D

./: CMakeLists.txt  README.md
scripts/: batch_mint_viewer.py  batch_running.py  batch_running_seq.py  batch_statistics.py  conv_data.py  hexme_remesh_i_nocurl_output_data.csv  hexme_remesh_i_output_data.csv  merge_csv.py  merge_solids_data.py  merged_solids_sorted_data.csv  merged_sorted_data.csv  multi_dir_output_data.csv  multi_dir_output_data_no_int.csv  multi_dir_output_log.txt  plot_benchmarks.py  plot_merged_data.py  png2jpg.py  proc_sig25_results.py  scatter_plot.py  solids_output_data.csv  solids_overflow_output_data.csv
src/CubeCover/: CubeCover.h  FrameField.cpp  FrameField.h  IsolinesExtraction.cpp  MeshSubdivide.cpp  MeshSubdivide.h  ReadFrameField.cpp  ReadFrameField.h  ReadVTK.h  SingularCurveNetwork.cpp  SingularCurveNetwork.h  StreamlinesExtraction.cpp  StreamlinesExtraction.h  TetMeshConnectivity.cpp  TetMeshConnectivity.h  TetMeshDualLaplace.cpp  TetMeshDualLaplace.h  readMeshFixed.h
tools/00_basic_test/: CMakeLists.txt
tools/01_Mint3D/: CMakeLists.txt
tools/01_Mint3D/src/: .polyscope.ini  MiNT_mesh.h  imgui.ini  main.cpp
tools/01_Mint3D/src/MiNT3D/: MiNTCommonFunc.cpp  MiNTCommonFunc.h  MiNTEnergy.cpp  MiNTEnergy.h  MiNTEnergy_old.cpp  MiNTModel.cpp  MiNTModel.h  MiNTModel_UnitTests.cpp  MiNTModel_UnitTests.h  MiNTSolveParams.cpp  MiNTSolveParams.h  ObjFunc.h  ObjFunc.h   ObjFuncZoo.h  Projection.cpp  Projection.h  imgui.ini
tools/01_Mint3D/src/Optimization/: CholeskyPreconditioner.h  LineSearch.cpp  LineSearch.h  NewtonDescent.cpp  NewtonDescent.h  NewtonDescent_gmres.cpp  Timer.h
tools/01_Mint3D/src/SymmetricTensor/: SymmetricKruskalTensor.cpp  SymmetricKruskalTensor.h  SymmetricMomentTensor.cpp  SymmetricMomentTensor.h  SymmetricTensorCommon.cpp  SymmetricTensorCommon.h
tools/01_Mint3D/src/mint3D_hook/: .polyscope.ini  AppState.cpp  AppState.h  FieldView.cpp  FieldView.h  FileParser.cpp  FileParser.h  ImGuiWidgets.cpp  ImGuiWidgets.h  Mint3DHook.cpp  Mint3DHook.h  Serialization.cpp  Serialization.h  UtilsMisc.cpp  UtilsMisc.h  imgui.ini
tools/02_SymFrameView/: CMakeLists.txt
tools/02_SymFrameView/src/: BoysColoring.cpp  BoysColoring.h  CommonFunctions.cpp  CommonFunctions.h  FieldsRendering.cpp  FieldsRendering.h  PointGraph.cpp  PointGraph.h  SaveForRendering.cpp  SaveForRendering.h  main.cpp
tools/02_SymFrameView/test_meshes/notch/: frames_curr.bfra  frames_curr_intgrid.hexex  frames_curr_subdiv_intgrid.hexex
tools/02_SymFrameView/test_meshes/spot/: frames_curr.fra  frames_curr_config.json  frames_curr_intgrid.hexex  frames_curr_seamless.hexex  frames_curr_subdiv.fra  frames_curr_subdiv_intgrid.hexex  spot_5000_subdiv.mesh
tools/shared/: cube_lil.mesh  notch5_0.mesh  notch5_500.mesh  octahedron_2.mesh  octahedron_8.mesh  oloid_4kT.mesh  spot_1000.mesh  square_pyramid_100.mesh  square_pyramid_500.mesh  stanford_bunny_10000.mesh  tet_1.mesh  tetrahedron_200.mesh  triangle_notwist_400.mesh  triangular_bipyramid.mesh
